Basic CR(U)D for resources, missing updates

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,7 @@
             "error",
             "always"
         ],
-        "no-unused-vars": ["warn", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }],
+        "no-unused-vars": ["warn", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false, "argsIgnorePattern": "next" }],
         "no-console": ["warn"]
     }
 }
