--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '2'
 services:
-    myapp:
+    api:
         container_name: "varjo-resources-api"
         image: varjo-resources:latest
         environment:
