--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
   },
   "main": "src/index.js",
   "scripts": {
-    "start-dev": "nodemon ./src/index.js",
-    "containers-start": "npm run build && docker-compose down && docker-compose up",
+    "containers-start": "npm run build && docker-compose down && docker-compose up -d",
     "start": "node src/index.js",
     "build": "docker build -t varjo-resources .",
-    "test": "echo 'No tests yet!'",
+    "test": "mocha './test/**/*.js'",
     "coverage": "nyc npm run test",
     "lint": "eslint 'src/**.js'"
   },
@@ -35,7 +34,10 @@
     "response-time": "^2.3.2"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "eslint": "^5.16.0",
+    "mocha": "^6.2.0",
     "nodemon": "^1.19.1",
     "nyc": "^14.1.1"
   }
