--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "node src/index.js",
     "build": "docker build -t varjo-resources .",
     "test": "mocha './test/**/*.js'",
-    "coverage": "nyc npm run test",
+    "tests-with-coverage": "nyc npm run test",
     "lint": "eslint 'src/**.js'"
   },
   "keywords": [
